...
        android:layout_height="120dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/logoeo"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextPassword"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/confrmeditTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/confrmeditTextPassword"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/Full_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/Full_Name"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:hint="Full Name"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/Studentid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confrmeditTextPassword" />

    <EditText
        android:id="@+id/Studentid"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="ID"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Collegenamestudend"
        app:layout_constraintEnd_toStartOf="@+id/Studentdob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Full_Name" />

    <EditText
        android:id="@+id/Studentdob"
        android:layout_width="140dp"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:hint="College Name"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/coursestudend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Studentdob" />

    <EditText
        android:id="@+id/coursestudend"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:hint="Course Name"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/Groupstudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Collegenamestudend" />

    <EditText
        android:id="@+id/Groupstudent"
...
        android:background="@drawable/edit"
        android:gravity="center"
        android:hint="Group Number"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursestudend" />

    <Button
        android:id="@+id/buttonSignup"
...
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:background="#FD9600"
        android:gravity="center"
        android:text="Sign up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Groupstudent" />


...
