...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Notifications"
            android:layout_width="109dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="30dp"
            android:background="#FD9600"
            android:text="Notifications"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toStartOf="@+id/Club"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/Club"
...
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:background="#FD9600"
            android:text="Club"
            app:layout_constraintBottom_toTopOf="@+id/textViewUserEmail"
            app:layout_constraintEnd_toStartOf="@+id/join_club"
            app:layout_constraintStart_toEndOf="@+id/Notifications"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/join_club"
...
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="590dp"
            android:background="#FD9600"
            android:text="My Clubs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Club"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

...
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="89dp"
            android:text="Group"
            android:textColor="#fff"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
            app:layout_constraintEnd_toStartOf="@+id/Group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/Group"
...
            android:layout_marginStart="84dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="150dp"
            android:text="GroupNumber"
            android:textColor="#fff"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/Messagesstudent"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/course" />

        <ImageView
            android:id="@+id/buttonLogout"
            android:layout_width="70dp"
...
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/messagew"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feedbackbutton"
            app:layout_constraintStart_toEndOf="@+id/buttonLogout"
            app:layout_constraintTop_toBottomOf="@+id/Group" />

        <ImageView
            android:id="@+id/feedbackbutton"
            android:layout_width="70dp"
...
