...
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:background="#FD9600"
        android:gravity="center"
        android:text="Sign in"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/aboutuss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordt" />

    <TextView
        android:id="@+id/aboutuss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="6dp"
        android:text="About Us"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSignUpt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignint" />

    <Button
        android:id="@+id/textViewSignUpt"
...
        android:layout_margin="15dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
