...
        android:background="#FD9600"
        android:gravity="center"
        android:text="Feedback"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/feedbackname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/feedbackname"
...
        android:gravity="center"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/feedbackdec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackname" />

    <EditText
        android:id="@+id/feedbackdec"
...
        android:gravity="start|top"
        android:hint="Write here....."
        android:inputType="textMultiLine"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/submitfeedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackemail" />

    <Button
        android:id="@+id/submitfeedback"
...
        android:layout_height="50dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="180dp"
        android:background="#FD9600"
        android:text="Submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackdec" />

...
